Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -78,6 +78,7 @@
 .phone span {
     font-size: 7rem;
     color: var(--orange);
+    -webkit-text-fill-color: var(--orange);
 }
 
 .headers h2 {
